--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,13 @@ main img {
     min-width: 100px;
     max-width: 100%;
     height: auto;
+    /* add filter */
+    filter: grayscale(0);
+    transition: filter 0.5s ease;
+}
+
+main img:hover {
+    filter: grayscale(1);
 }
 
 main p {
